# web-tutorial-v2

./: .dockerignore  .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.md  compose.ci.yaml  compose.yaml
.claude/: settings.json  statusline-command.sh
.devcontainer/: .bashrc_private  .private.bashrc  Dockerfile  devcontainer-lock.json  devcontainer.json  init.sh  on-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .env.sample  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 634e50af5a67_add_avatar_url_column_to_users.py  da61d148b844_create_initial_table.py
backend/app/: auth.py  config.py  exception_handlers.py  logging_config.py  main.py  middleware.py  model.py  permissions.py  routers.py  schemas.py  seed.py  session.py
backend/chapter03/: sqlalchemy_tutorial.ipynb
backend/tests/: conftest.py  test_api.py
docker/: backend.Dockerfile  frontend.Dockerfile  proxy.Dockerfile
docker/nginx/: default.conf
docs/: README.md  local_service.md  local_tools.md
docs/appendix/: README.md
docs/chapter01/: README.md
docs/chapter02/: README.md
docs/chapter03/: README.md
docs/chapter04/: README.md
docs/chapter05/: README.md
docs/chapter06/: README.md
docs/chapter07/: README.md
docs/chapter08/: README.md
docs/chapter09/: README.md
docs/chapter10/: README.md
docs/chapter11/: README.md
docs/chapter12/: README.md
docs/chapter13/: README.md
docs/chapter14/: README.md
docs/chapter15/: README.md
e2e/: .gitignore  package.json  playwright.config.ts  pnpm-lock.yaml
e2e/tests/: auth.setup.ts  items.spec.ts
frontend/: .env.sample  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/(public)/: layout.tsx
frontend/src/components/: Counter.tsx
frontend/src/hooks/: use-mobile.ts
frontend/src/lib/: env.ts
k8s/argocd/: application.yaml  project.yaml
k8s/base/: app.yaml  backend.yaml  configmap.yaml  db.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  migrate-job.yaml  namespace.yaml
k8s/overlays/prod/: ingress-patch.yaml  kustomization.yaml  secret.yaml.example
tasks/: lessons.md  todo.md
(+22 files in other folders)
