[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic~=1.18.4",
    "fastapi[standard]>=0.136.1",
    "psycopg[binary]~=3.3.4",
    "pwdlib[argon2]~=0.3.0",
    "pydantic-settings~=2.14.0",
    "python-dotenv~=1.2.2",
    "sqlalchemy~=2.0.49",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
]
